--- a/Example/ApesterKit/Base.lproj/Main.storyboard
+++ b/Example/ApesterKit/Base.lproj/Main.storyboard
@@ -304,6 +304,7 @@
                                     <segment title="Quiz"/>
                                     <segment title="Story"/>
                                     <segment title="Poll"/>
+                                    <segment title="Custom"/>
                                 </segments>
                                 <connections>
                                     <action selector="UnitTypeSegment:" destination="qqy-7d-rj5" eventType="valueChanged" id="pPs-oN-gHV"/>
@@ -361,7 +362,7 @@
                                                     <constraint firstAttribute="trailing" secondItem="ott-qq-eDa" secondAttribute="trailing" constant="8" id="MjB-qG-5Ti"/>
                                                 </constraints>
                                             </stackView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8g3-Xd-FwA">
+                                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8g3-Xd-FwA">
                                                 <rect key="frame" x="315" y="13.5" width="82" height="62.5"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
@@ -437,7 +438,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lzn-pE-xxH">
-                                <rect key="frame" x="159" y="763" width="59.5" height="34.5"/>
+                                <rect key="frame" x="159" y="747" width="59.5" height="34.5"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Next"/>
                                 <connections>
